--- a/src/blocks/form/_form.scss
+++ b/src/blocks/form/_form.scss
@@ -138,9 +138,8 @@
   }
 
   &__legend {
-    padding-inline: 0;
+    margin-block: 0 clamp(1.125rem, 4vw, 2.5rem);
     grid-column: 1/-1;
-    padding-block: 0 clamp(1.125rem, 4vw, 2.5rem);
     font-size: clamp(1em, 2vw, 1.25em);
     font-variation-settings: 'wght' 800;
 
